Refactor everything so it builds